# Trading-BOT

./: .env.example  .gitignore  README.md  backtest.py  backtest_grid.py  claude.md  config.py  config.yaml  grid_main.py  main.py  optimize.py  pyproject.toml  requirements.txt
data/: fetcher.py
docs/superpowers/plans/: 2026-03-23-phase1-data-features.md
docs/superpowers/specs/: 2026-03-23-ml-trading-bot-design.md
execution/: order_manager.py  position_tracker.py
grid/: calculator.py  engine.py
notifications/: telegram.py
risk/: daily_guard.py  sizing.py
src/: __init__.py
src/core/: __init__.py  types.py
src/data/: __init__.py  cache.py  preprocess.py
src/data/providers/: __init__.py  base.py  crypto.py  forex.py  stocks.py
src/features/: multi_timeframe.py  pipeline.py  price_action.py  technical.py  volume.py
src/models/: __init__.py
src/paper_trading/: __init__.py
strategy/: filters.py  signals.py
tests/: test_data.py  test_features.py  test_filters.py  test_signals.py  test_sizing.py
