[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ml-trading-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0.0",
    "yfinance>=0.2.36",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "ta>=0.11.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "PyYAML>=6.0.1",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=4.1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
